--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <p> </p>
                 <div class="result">
                         <button onclick="FResultTO()">決定</button>
-                        <p>占い結果</p>
+                        <p>占い結果※参考にするだけにしてください。</p>
                         <h2 id="TOresult">結果はここ</h3>
                 </div>
         </div>
@@ -176,7 +176,7 @@
                 <p> </p>
                 <div class="result">
                         <button onclick="FResultTM()">決定</button>
-                        <p>占い結果</p>
+                        <p>占い結果※参考にするだけにしてください</p>
                         <h2 id="TMresult">結果はここ</h3>
                 </div>
         </div>
